@@ -40,31 +40,6 @@ public abstract class DefaultLexer implements Lexer {
     }
 
     /**
-     * This method is called by the SyntaxKit whenever this language is set on
-     * a pane.  This will add the language keybindings to the keymap of the
-     * control.  You should *NOT* override this method if you need to add 
-     * language specific key bindings, but override the addKeyActions method 
-     * @param pane
-     */
-    public void install(JEditorPane pane) {
-        Keymap km_parent = JTextComponent.getKeymap(JTextComponent.DEFAULT_KEYMAP);
-        Keymap km_new = JTextComponent.addKeymap(null, km_parent);
-        addKeyActions(km_new);
-        pane.setKeymap(km_new);
-    }
-
-    /**
-     * Add keyboard actions to this control.  
-     * @param map
-     */
-    public void addKeyActions(Keymap map) {
-        map.addActionForKeyStroke(KeyStroke.getKeyStroke("control Z"), SyntaxActions.UNDO);
-        map.addActionForKeyStroke(KeyStroke.getKeyStroke("control Y"), SyntaxActions.REDO);
-        map.addActionForKeyStroke(KeyStroke.getKeyStroke("TAB"), SyntaxActions.INDENT);
-        map.addActionForKeyStroke(KeyStroke.getKeyStroke("shift TAB"), SyntaxActions.UNINDENT);
-    }
-
-    /**
      * Return the current matched token as a string.  This is <b>expensive</b>
      * as it creates a new String object for the token.  Use with care.
      *
