@@ -13,7 +13,10 @@
  */
 package jsyntaxpane.syntaxkits;
 
+import javax.swing.KeyStroke;
+import javax.swing.text.Keymap;
 import jsyntaxpane.DefaultSyntaxKit;
+import jsyntaxpane.SyntaxActions;
 import jsyntaxpane.lexers.GroovyLexer;
 
 /**
@@ -24,5 +27,11 @@ public class GroovySyntaxKit extends DefaultSyntaxKit {
 
     public GroovySyntaxKit() {
         super(new GroovyLexer());
+    }
+
+    @Override
+    public void addKeyActions(Keymap map) {
+        super.addKeyActions(map);
+        map.addActionForKeyStroke(KeyStroke.getKeyStroke("ENTER"), SyntaxActions.JAVA_INDENT);
     }
 }
